--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter:3.3.3'
     testImplementation 'io.rest-assured:rest-assured:5.5.0'
     testImplementation 'io.rest-assured:json-path:5.5.0'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0-rc1'
 
 
 }
