--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter:3.3.3'
     testImplementation 'io.rest-assured:rest-assured:5.5.0'
     testImplementation 'io.rest-assured:json-path:5.5.0'
+
     testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0-rc1'
+    implementation 'io.rest-assured:json-schema-validator:5.5.0'
+    testImplementation 'org.assertj:assertj-core:3.26.3' // estudar para aprender utilizar, pode ser uma troca do hamcrast
 
 
 }
