--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,2 +1,7 @@
 application:
   urlBase: https://dummyjson.com
+  login : /auth/login
+  getCurrentUser : /auth/me
+  getAllProducts : /products
+  addProduct : /products/add
+  getSingleProduct : /products/{idProduct}
