--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,5 +1,6 @@
 application:
   urlBase: https://dummyjson.com
+  users: /users
   login : /auth/login
   getCurrentUser : /auth/me
   getAllProducts : /products
